--- a/section_Classifier_Decision_Tree_Learners__.tex
+++ b/section_Classifier_Decision_Tree_Learners__.tex
@@ -1,5 +1,4 @@
-\section{Classifier : Decision Tree Learners}
-
+\section{Classifier : Decision Trees}
 rview of this supervised learner used in regression and classification problems.
 
 The models builds a tree in the graph-theory sense where each node has a rule based on set belonging. Each rule defines a linear (or similar) partition of input space and the rules that determine the partitions are built from the sample's features. At each node we would have a decision to include or exclude a sample $s$ from that partition by checking if $X_i(s) \in U$ where $X_i$ might be any given feature of the data and $U$ is a subset of said feature's space.
